# erebos-api

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  _d_e_f_v_e_r_s_i_o_n-example.html  annotated.html  appveyor.yml  args_8h.html  args_8h_source.html  classerebos_1_1args-members.html  classerebos_1_1args.html  classerebos_1_1socket_1_1_t_c_p_socket-members.html  classerebos_1_1socket_1_1_t_c_p_socket.html  classes.html  compile.py  dir_68267d1309a1af8e8297ef4c3efbcdba.html  erebos_8h.html  erebos_8h_source.html  examples.html  file_8h.html  file_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  input_8h.html  input_8h_source.html  logger_8h.html  logger_8h_source.html  misc_8h.html  misc_8h_source.html  (+37 more)
Testing/Temporary/: CTestCostData.txt
cmake/: Coverage.cmake  Test.cmake
coverage-results/: args.gcno  coverage.info  file.gcda  file.gcno  input.gcda  input.gcno  misc.gcda  misc.gcno  native.gcda  native.gcno  socket.gcda  socket.gcno  test-file  test-file.gcda  test-file.gcno  test-input  test-input.gcda  test-input.gcno  test-native  test-native.gcda  test-native.gcno  test-strutils  test-strutils.gcda  test-strutils.gcno  test-time  test-time.gcda  test-time.gcno  time_utils.gcda  time_utils.gcno
scripts/: coverage.sh  deploy_all.sh  deploy_pages.sh  make-package.bat  make-package.sh
scripts/covres/: coverage.info  index-sort-f.html  index-sort-l.html  index.html
scripts/covres/g++-v5/: chrono.func-sort-c.html  chrono.func.html  chrono.gcov.html  fstream.func-sort-c.html  fstream.func.html  fstream.gcov.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  istream.func-sort-c.html  istream.func.html  istream.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html  sstream.func-sort-c.html  sstream.func.html  sstream.gcov.html  streambuf.func-sort-c.html  streambuf.func.html  streambuf.gcov.html  thread.func-sort-c.html  thread.func.html  thread.gcov.html
scripts/covres/g++-v5/bits/: basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  locale_facets.h.func-sort-c.html  locale_facets.h.func.html  locale_facets.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-sort-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_iterator.h.func-sort-c.html  stl_iterator.h.func.html  stl_iterator.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_uninitialized.h.func-sort-c.html  stl_uninitialized.h.func.html  stl_uninitialized.h.gcov.html  stl_vector.h.func-sort-c.html  stl_vector.h.func.html  stl_vector.h.gcov.html  vector.tcc.func-sort-c.html  vector.tcc.func.html  vector.tcc.gcov.html
scripts/covres/g++-v5/ext/: index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  string_conversions.h.func-sort-c.html  string_conversions.h.func.html  string_conversions.h.gcov.html
scripts/covres/home/ssynx/Devel/erebos-api/src/: file.cpp.func-sort-c.html  file.cpp.func.html  file.cpp.gcov.html  framework.cpp.func-sort-c.html  framework.cpp.func.html  framework.cpp.gcov.html  framework.h.func-sort-c.html  framework.h.func.html  framework.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  input.cpp.func-sort-c.html  input.cpp.func.html  input.cpp.gcov.html  logger.cpp.func-sort-c.html  logger.cpp.func.html  logger.cpp.gcov.html  native.cpp.func-sort-c.html  native.cpp.func.html  native.cpp.gcov.html  stringutils.h.func-sort-c.html  stringutils.h.func.html  stringutils.h.gcov.html  time_utils.cpp.func-sort-c.html  time_utils.cpp.func.html  types.h.func.html  (+3 more)
scripts/covres/usr/include/bits/: fcntl2.h.func-sort-c.html  fcntl2.h.func.html  fcntl2.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  stdio2.h.func-sort-c.html  stdio2.h.func.html  stdio2.h.gcov.html  stdlib.h.func-sort-c.html  stdlib.h.func.html  stdlib.h.gcov.html  string3.h.func-sort-c.html  string3.h.func.html  string3.h.gcov.html  unistd.h.func-sort-c.html  unistd.h.func.html  unistd.h.gcov.html
scripts/covres/usr/include/sys/: index-sort-f.html  index-sort-l.html  index.html  stat.h.func-sort-c.html  stat.h.func.html  stat.h.gcov.html
scripts/erebos-0-1-0-windows-x64/include/: ftypes.h  input.h  logger.h  stringutils.h
scripts/erebos-0-1-0-windows-x86/include/: file.h  native.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_7.js  files_8.js  files_9.js  functions_0.js  (+31 more)
src/: CMakeLists.txt  aes.cpp  aes.h  args.cpp  args.h  crypto.cpp  crypto.h  erebos.h  file.cpp  file.h  framework.cpp  framework.h  ftypes.h  input.cpp  input.h  logger.cpp  logger.h  md5.cpp  md5.h  misc.cpp  misc.h  native.cpp  native.h  platform_defs.h  sha256.cpp  sha256.h  smart_ptr.h  socket.cpp  socket.h  stringutils.h  test.cpp  test.h  time.cpp  time.h  time_utils.cpp  time_utils.h  types.h  version.h.in
test/: a.out  test-example.cpp  test-file.cpp  test-framework.cpp  test-input.cpp  test-logger.cpp  test-native.cpp  test-strutils.cpp  test-time.cpp  test.cpp  test.cpp.old_example  test.h  test.h.old
(+27 files in other folders)
